test/neg/protected.scala
abstract class A {

    protected def x(): int;
    def y(): int;

}

abstract class B extends A {

    def x(): int;
    protected def y(): int;

}

